--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "echarts": "^5.1.2",
+    "element-ui": "^2.15.8",
+    "js-cookie": "^3.0.1",
+    "less": "^4.1.2",
+    "less-loader": "^6.0.0",
+    "mockjs": "^1.1.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
